# dde-file-manager-vcs-plugin

./: Blueprint.md  CMakeLists.txt  Plan.md  README.md  Refactor-Blueprint.md  Refactor-Plan.md
.github/workflows/: tests.yml
debian/: changelog  control  copyright  dde-file-manager-git-extension.install  dde-file-manager-git-service.install  dde-file-manager-git-service.postinst  dde-file-manager-git-service.postrm  dde-file-manager-git-service.prerm  rules
include/: cache.h  global.h
scripts/: deploy.sh  run-tests.sh  test-installation.sh
src/: cache.cpp
src/git/: CMakeLists.txt  dfm-extension-git.cpp  gitcommandexecutor.cpp  gitcommandexecutor.h  gitdialogs.cpp  gitdialogs.h  gitemblemiconplugin.cpp  gitemblemiconplugin.h  gitfilesystemwatcher.cpp  gitfilesystemwatcher.h  gitmenubuilder.cpp  gitmenubuilder.h  gitmenumanager.cpp  gitmenumanager.h  gitmenuplugin.cpp  gitmenuplugin.h  gitoperationservice.cpp  gitoperationservice.h  gitoperationutils.cpp  gitoperationutils.h  gitrepowatcher.cpp  gitrepowatcher.h  gitstashutils.cpp  gitstashutils.h  gitstatusparser.cpp  gitstatusparser.h  gitwindowplugin.cpp  gitwindowplugin.h  utils.cpp  utils.h
src/git/common/: gitrepositoryservice.cpp  gitrepositoryservice.h  gitserviceinterface.h
src/git/dialogs/: gitblamedialog.cpp  gitblamedialog.h  gitbranchcompariondialog.cpp  gitbranchcompariondialog.h  gitcheckoutdialog.cpp  gitcheckoutdialog.h  gitcleandialog.cpp  gitcleandialog.h  gitcommitdialog.cpp  gitcommitdialog.h  gitdialogs.cpp  gitdialogs.h  gitdiffdialog.cpp  gitdiffdialog.h  gitfilepreviewdialog.cpp  gitfilepreviewdialog.h  gitlogcontextmenumanager.cpp  gitlogcontextmenumanager.h  gitlogdatamanager.cpp  gitlogdatamanager.h  gitlogdialog.cpp  gitlogdialog.h  gitlogsearchmanager.cpp  gitlogsearchmanager.h  gitoperationdialog.cpp  gitoperationdialog.h  gitpulldialog.cpp  gitpulldialog.h  gitpushdialog.cpp  gitpushdialog.h  gitremotemanager.cpp  gitremotemanager.h  gitstashdialog.cpp  gitstashdialog.h  gitstatusdialog.cpp  gitstatusdialog.h
src/git/widgets/: characteranimationwidget.cpp  characteranimationwidget.h  filerenderer.cpp  filerenderer.h  gitcommitdetailswidget.cpp  gitcommitdetailswidget.h  linenumbertextedit.cpp  linenumbertextedit.h  markdownrenderer.cpp  markdownrenderer.h  searchablebranchselector.cpp  searchablebranchselector.h
src/git2/: CMakeLists.txt
src/git2/common/: CMakeLists.txt
src/git2/common/include/: git-status-parser.h  git-types.h  git-utils.h
src/git2/common/src/: git-status-parser.cpp  git-utils.cpp
src/git2/daemon/: CMakeLists.txt
src/git2/daemon/include/: git-daemon.h  git-repository-watcher.h  git-service.h  git-status-cache.h  git-version-worker.h
src/git2/daemon/src/: git-daemon.cpp  git-repository-watcher.cpp  git-service.cpp  git-status-cache.cpp  git-version-worker.cpp  main.cpp
src/git2/daemon/systemd/: dde-file-manager-git-daemon.service  org.deepin.FileManager.Git.service
src/git2/dialog/: CMakeLists.txt
src/git2/dialog/src/: main.cpp
src/git2/plugin/: CMakeLists.txt  dfm-extension-git.json
src/git2/plugin/include/: git-dbus-client.h  git-emblem-plugin.h  git-local-cache.h  git-menu-plugin.h  git-version-controller.h  git-window-plugin.h
src/git2/plugin/src/: dfm-extension-git.cpp  git-dbus-client.cpp  git-emblem-plugin.cpp  git-local-cache.cpp  git-menu-plugin.cpp  git-version-controller.cpp  git-window-plugin.cpp
src/git2/tests/: CMakeLists.txt  README.md  debug_test.cpp  minimal_test.cpp  test-git-dbus-service.cpp  test-git-status-cache.cpp  test-git-status-parser.cpp  test-git-utils.cpp  test-git-version-worker.cpp
src/git2/tests/utils/: mock-git-repository.cpp  test-utils.cpp  test-utils.h
